--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -118,21 +118,21 @@ template.locked: Заблокирован
 template.confirm.delete: 'Вы уверены, что хотите удалить этот шаблон?'
 template.conflict.name: 'Шаблон с таким названием уже существует.'
 template.conflict.prefix: 'Шаблон с таким префиксом уже существует.'
-template.permission.view_issues: 'Просмотр задач'
-template.permission.create_issues: 'Создание задач'
-template.permission.edit_issues: 'Редактирование задач'
-template.permission.postpone_issues: 'Откладывание задач'
-template.permission.resume_issues: 'Возобновление задач'
-template.permission.reassign_issues: 'Переназначение задач'
-template.permission.reopen_issues: 'Повторное открытие задач'
+template.permission.view_records: 'Просмотр записей'
+template.permission.create_records: 'Создание записей'
+template.permission.edit_records: 'Редактирование записей'
+template.permission.postpone_records: 'Откладывание записей'
+template.permission.resume_records: 'Возобновление записей'
+template.permission.reassign_records: 'Переназначение записей'
+template.permission.reopen_records: 'Повторное открытие записей'
 template.permission.add_comments: 'Добавление комментариев'
 template.permission.add_files: 'Добавление файлов'
 template.permission.remove_files: 'Удаление файлов'
 template.permission.private_comments: 'Добавление/чтение приватных комментариев'
 template.permission.send_reminders: 'Рассылка напоминаний'
-template.permission.delete_issues: 'Удаление задач'
-template.permission.attach_subissues: 'Прикрепление подзадач'
-template.permission.detach_subissues: 'Открепление подзадач'
+template.permission.delete_records: 'Удаление записей'
+template.permission.attach_subrecords: 'Прикрепление подзаписей'
+template.permission.detach_subrecords: 'Открепление подзаписей'
 state: Состояние
 states: Состояния
 state.new: 'Новое состояние'
