--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -118,21 +118,21 @@ template.locked: Заключен
 template.confirm.delete: 'Сигурен ли сте че искате да изтриете този темплейт?'
 template.conflict.name: 'Вече същестува темплейт с въведеното име.'
 template.conflict.prefix: 'Вече същестува темплейт с въведеното представка.'
-template.permission.view_issues: 'Разглеждане на задачите'
-template.permission.create_issues: ~
-template.permission.edit_issues: 'Редактиране на задачи'
-template.permission.postpone_issues: ~
-template.permission.resume_issues: ~
-template.permission.reassign_issues: ~
-template.permission.reopen_issues: ~
+template.permission.view_records: ~
+template.permission.create_records: ~
+template.permission.edit_records: ~
+template.permission.postpone_records: ~
+template.permission.resume_records: ~
+template.permission.reassign_records: ~
+template.permission.reopen_records: ~
 template.permission.add_comments: ~
 template.permission.add_files: ~
 template.permission.remove_files: ~
 template.permission.private_comments: ~
 template.permission.send_reminders: ~
-template.permission.delete_issues: 'Изтриване на задачи'
-template.permission.attach_subissues: ~
-template.permission.detach_subissues: ~
+template.permission.delete_records: ~
+template.permission.attach_subrecords: ~
+template.permission.detach_subrecords: ~
 state: Условие
 states: Условия
 state.new: 'Ново условие'
