--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -118,21 +118,21 @@ template.locked: Gesperrt
 template.confirm.delete: 'Möchten Sie diese Anfrageart wirklich löschen?'
 template.conflict.name: 'Eine Anfrageart mit diesem Namen existiert bereits.'
 template.conflict.prefix: 'Eine Anfrageart mit diesem Präfix existiert bereits.'
-template.permission.view_issues: 'Tickets anzeigen'
-template.permission.create_issues: ~
-template.permission.edit_issues: 'Tickets bearbeiten'
-template.permission.postpone_issues: ~
-template.permission.resume_issues: ~
-template.permission.reassign_issues: ~
-template.permission.reopen_issues: ~
+template.permission.view_records: ~
+template.permission.create_records: ~
+template.permission.edit_records: ~
+template.permission.postpone_records: ~
+template.permission.resume_records: ~
+template.permission.reassign_records: ~
+template.permission.reopen_records: ~
 template.permission.add_comments: ~
 template.permission.add_files: ~
 template.permission.remove_files: ~
 template.permission.private_comments: ~
 template.permission.send_reminders: ~
-template.permission.delete_issues: 'Tickets löschen'
-template.permission.attach_subissues: ~
-template.permission.detach_subissues: ~
+template.permission.delete_records: ~
+template.permission.attach_subrecords: ~
+template.permission.detach_subrecords: ~
 state: Status
 states: Status
 state.new: 'Neuer Status'
