--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -118,21 +118,21 @@ template.locked: Locked
 template.confirm.delete: 'Are you sure you want delete this template?'
 template.conflict.name: 'Template with entered name already exists.'
 template.conflict.prefix: 'Template with entered prefix already exists.'
-template.permission.view_issues: 'View issues'
-template.permission.create_issues: 'Create issues'
-template.permission.edit_issues: 'Edit issues'
-template.permission.postpone_issues: 'Postpone issues'
-template.permission.resume_issues: 'Resume issues'
-template.permission.reassign_issues: 'Reassign issues'
-template.permission.reopen_issues: 'Reopen issues'
+template.permission.view_records: 'View records'
+template.permission.create_records: 'Create records'
+template.permission.edit_records: 'Edit records'
+template.permission.postpone_records: 'Postpone records'
+template.permission.resume_records: 'Resume records'
+template.permission.reassign_records: 'Reassign records'
+template.permission.reopen_records: 'Reopen records'
 template.permission.add_comments: 'Add comments'
 template.permission.add_files: 'Add files'
 template.permission.remove_files: 'Remove files'
 template.permission.private_comments: 'Add/read private comments'
 template.permission.send_reminders: 'Send reminders'
-template.permission.delete_issues: 'Delete issues'
-template.permission.attach_subissues: 'Attach subissues'
-template.permission.detach_subissues: 'Detach subissues'
+template.permission.delete_records: 'Delete records'
+template.permission.attach_subrecords: 'Attach subrecords'
+template.permission.detach_subrecords: 'Detach subrecords'
 state: State
 states: States
 state.new: 'New state'
