--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -118,21 +118,21 @@ template.locked: Bloccato
 template.confirm.delete: 'Eliminare questo modello?'
 template.conflict.name: 'Un modello con lo stesso nome è già utilizzato.'
 template.conflict.prefix: 'Un modello con lo stesso prefisso è già utilizzato.'
-template.permission.view_issues: 'Mostra segnalazioni'
-template.permission.create_issues: ~
-template.permission.edit_issues: 'Modifica segnalazioni'
-template.permission.postpone_issues: ~
-template.permission.resume_issues: ~
-template.permission.reassign_issues: ~
-template.permission.reopen_issues: ~
+template.permission.view_records: ~
+template.permission.create_records: ~
+template.permission.edit_records: ~
+template.permission.postpone_records: ~
+template.permission.resume_records: ~
+template.permission.reassign_records: ~
+template.permission.reopen_records: ~
 template.permission.add_comments: ~
 template.permission.add_files: ~
 template.permission.remove_files: ~
 template.permission.private_comments: ~
 template.permission.send_reminders: ~
-template.permission.delete_issues: 'Elimina segnalazioni'
-template.permission.attach_subissues: ~
-template.permission.detach_subissues: ~
+template.permission.delete_records: ~
+template.permission.attach_subrecords: ~
+template.permission.detach_subrecords: ~
 state: Stato
 states: Stati
 state.new: 'Nuovo stato'
