--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -118,21 +118,21 @@ template.locked: Geblokkeerd
 template.confirm.delete: 'Ben je zeker dat je dit sjabloon wilt verwijderen?'
 template.conflict.name: 'Sjabloon met ingevoerde naam bestaat reeds.'
 template.conflict.prefix: 'Sjabloon met ingevoerde voorvoegsel bestaat reeds.'
-template.permission.view_issues: 'Bekijk Issues'
-template.permission.create_issues: ~
-template.permission.edit_issues: 'Issues bewerken'
-template.permission.postpone_issues: ~
-template.permission.resume_issues: ~
-template.permission.reassign_issues: ~
-template.permission.reopen_issues: ~
+template.permission.view_records: ~
+template.permission.create_records: ~
+template.permission.edit_records: ~
+template.permission.postpone_records: ~
+template.permission.resume_records: ~
+template.permission.reassign_records: ~
+template.permission.reopen_records: ~
 template.permission.add_comments: ~
 template.permission.add_files: ~
 template.permission.remove_files: ~
 template.permission.private_comments: ~
 template.permission.send_reminders: ~
-template.permission.delete_issues: 'Issues verwijderen'
-template.permission.attach_subissues: ~
-template.permission.detach_subissues: ~
+template.permission.delete_records: ~
+template.permission.attach_subrecords: ~
+template.permission.detach_subrecords: ~
 state: Status
 states: Statussen
 state.new: 'Nieuwe status'
