--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -118,21 +118,21 @@ template.locked: Travado
 template.confirm.delete: 'Tem certeza que quer apagar este template?'
 template.conflict.name: 'O template escolhido já existe.'
 template.conflict.prefix: 'O prefixo escolhido já existe.'
-template.permission.view_issues: 'Ver tarefas'
-template.permission.create_issues: ~
-template.permission.edit_issues: 'Editar tarefas'
-template.permission.postpone_issues: ~
-template.permission.resume_issues: ~
-template.permission.reassign_issues: ~
-template.permission.reopen_issues: ~
+template.permission.view_records: ~
+template.permission.create_records: ~
+template.permission.edit_records: ~
+template.permission.postpone_records: ~
+template.permission.resume_records: ~
+template.permission.reassign_records: ~
+template.permission.reopen_records: ~
 template.permission.add_comments: ~
 template.permission.add_files: ~
 template.permission.remove_files: ~
 template.permission.private_comments: ~
 template.permission.send_reminders: ~
-template.permission.delete_issues: 'Excluir tarefas'
-template.permission.attach_subissues: ~
-template.permission.detach_subissues: ~
+template.permission.delete_records: ~
+template.permission.attach_subrecords: ~
+template.permission.detach_subrecords: ~
 state: Estado
 states: Estados
 state.new: 'Novo estado'
