--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -118,21 +118,21 @@ template.locked: Låst
 template.confirm.delete: 'Är du säker på att du vill ta bort den här mallen?'
 template.conflict.name: 'Mall med detta namnet finns redan.'
 template.conflict.prefix: 'Mall med detta prefixet finns redan.'
-template.permission.view_issues: 'Visa ärenden'
-template.permission.create_issues: ~
-template.permission.edit_issues: 'Ändra ärenden'
-template.permission.postpone_issues: ~
-template.permission.resume_issues: ~
-template.permission.reassign_issues: ~
-template.permission.reopen_issues: ~
+template.permission.view_records: ~
+template.permission.create_records: ~
+template.permission.edit_records: ~
+template.permission.postpone_records: ~
+template.permission.resume_records: ~
+template.permission.reassign_records: ~
+template.permission.reopen_records: ~
 template.permission.add_comments: ~
 template.permission.add_files: ~
 template.permission.remove_files: ~
 template.permission.private_comments: ~
 template.permission.send_reminders: ~
-template.permission.delete_issues: 'Ta bort ärenden'
-template.permission.attach_subissues: ~
-template.permission.detach_subissues: ~
+template.permission.delete_records: ~
+template.permission.attach_subrecords: ~
+template.permission.detach_subrecords: ~
 state: Status
 states: Status
 state.new: 'Ny status'
