--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -118,21 +118,21 @@ template.locked: Kilitli
 template.confirm.delete: 'Bu şablonu silmek istediğinizden emin misiniz?'
 template.conflict.name: ~
 template.conflict.prefix: ~
-template.permission.view_issues: 'İşleri Göster'
-template.permission.create_issues: ~
-template.permission.edit_issues: 'İşleri düzenleme'
-template.permission.postpone_issues: ~
-template.permission.resume_issues: ~
-template.permission.reassign_issues: ~
-template.permission.reopen_issues: ~
+template.permission.view_records: ~
+template.permission.create_records: ~
+template.permission.edit_records: ~
+template.permission.postpone_records: ~
+template.permission.resume_records: ~
+template.permission.reassign_records: ~
+template.permission.reopen_records: ~
 template.permission.add_comments: ~
 template.permission.add_files: ~
 template.permission.remove_files: ~
 template.permission.private_comments: ~
 template.permission.send_reminders: ~
-template.permission.delete_issues: 'İşleri silme'
-template.permission.attach_subissues: ~
-template.permission.detach_subissues: ~
+template.permission.delete_records: ~
+template.permission.attach_subrecords: ~
+template.permission.detach_subrecords: ~
 state: Durum
 states: Durumlar
 state.new: 'Yeni durum'
