--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -140,7 +140,7 @@ state.name: 'Nom de l''état'
 state.abbreviation: Abréviation
 state.type: 'Type de l''état'
 state.type.initial: Initial
-state.type.interim: ~
+state.type.interim: Intermédiaire
 state.type.final: Final
 state.responsible: Responsable
 state.responsibles: ~
@@ -148,7 +148,7 @@ state.responsible.keep: 'Rester inchangé'
 state.responsible.assign: Affecter
 state.responsible.remove: Enlever
 state.transitions: Transitions
-state.next_by_default: 'Etat suivant par défaut'
+state.next_for: ~
 state.make_initial: 'Rendre initial'
 state.confirm.delete: 'Etes-vous sur de vouloir effacer cet état?'
 state.conflict.name: 'Il existe déjà un état portant ce nom.'
